--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
         <button class="menubutton" id="config">Configuration</button>
         <br/>
         <br/>
-        <button class="menubutton" id="ioc">Sentinel IOC Submission</button>
+        <button class="menubutton" id="ioc">Azure Sentinel IOC Submission</button>
         <br/>
         <br/>
         <footer>
