--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <body>
         <p>
             <img class="logo" src="menulogo.png">
-            <h2>Arbala Security Mutiltool</h2>
+            <h2>Arbala Security Multitool</h2>
         </p>
         <h3>Select an option</h3>
         <button class="menubutton" id="config">Configuration</button>
