--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <body>
         <p>
             <img class="logo" src="menulogo.png">
-            <h2>Arbala Security Multitool</h2>
+            <h2>Arbala Security Multi-tool</h2>
         </p>
         <h3>Select an option</h3>
         <button class="menubutton" id="config">Configuration</button>
@@ -15,8 +15,9 @@
         <br/>
         <footer>
             <p>Author: Arbala Security</p>
-            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Mutiltool Documentation</a></p>
+            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Multi-tool Documentation</a></p>
             <p><a href="https://github.com/Arbala-Security"  target="_blank">https://github.com/Arbala-Security</a></p>
+            <p>version 0.0.2.1</p>
         </footer>
     </body> 
     <script src="menu.js"></script>
