--- a/configuration.html
+++ b/configuration.html
@@ -21,8 +21,9 @@
         <br><br>
         <footer>
             <p>Author: Arbala Security</p>
-            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Mutiltool Documentation</a></p>
+            <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Multi-tool Documentation</a></p>
             <p><a href="https://github.com/Arbala-Security"  target="_blank">https://github.com/Arbala-Security</a></p>
+            <p>version 0.0.2.1</p>
         </footer>
     </body> 
     <script src="configuration.js"></script>
