--- a/configuration.html
+++ b/configuration.html
@@ -16,6 +16,9 @@
             <input type="text" id="secret">
             <br><br>
             <button id="setconfig">Save</button>
+            <br/>
+            <br/>
+        <button id="ioc">Azure Sentinel IOC Submission</button>
         <p id="warning"></p>
         <p id="output"></p>
         <br><br>
@@ -23,7 +26,7 @@
             <p>Author: Arbala Security</p>
             <p><a href="https://github.com/Arbala-Security/Multitool-Extension/blob/master/README.md"  target="_blank">Arbala Security Multi-tool Documentation</a></p>
             <p><a href="https://github.com/Arbala-Security"  target="_blank">https://github.com/Arbala-Security</a></p>
-            <p>version 0.0.3.0</p>
+            <p>version 0.0.4.0</p>
         </footer>
     </body> 
     <script src="configuration.js"></script>
